# Shared

./: CMakeLists.txt  LICENSE  README.md
config/: input.txt
src/: main.cpp
